# socialmedia-content-analysis

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: collect_youtube.py  extract_features.py  topup_youtube.py
data/model_a_datasets/: collect_youtube_real.py  download_genvideo.py  ff_download.py
data/model_b_datasets/: collect_youtube.py  extract_features.py  label_videos.py  topup_youtube.py
model_a/: append_real_features.py  extract_features.py  train.py
model_b/: train.py
preprocessing/: extract_frames.py  split_videos.py
rag/docs/deepfake_detection/: 2020_deepfake.txt  2022_2_deepfake.txt  2022_deepfake.txt  2024_deepfake.txt  2025_deepfake.txt
